# B.Sc._Vulkan_Ray_Tracing

./: .gitignore  CMakeLists.txt  README.md
common/: obj_loader.cpp  obj_loader.h
media/scenes/: box_pbr.mtl  floor_pbr.mtl  tree.mtl
prebuild_windows_app/: log_vk_rt_app.txt  options.json  vk_rt_app_lucy_mirror.exe.lnk
prebuild_windows_app/media/scenes/: mirror.mtl  sphere_pbr.mtl  sponza.mtl
rt_app/: CMakeLists.txt  hello_vulkan.cpp  hello_vulkan.h  main.cpp
rt_app/shaders/: frag_shader.frag  pbr.glsl  raytrace.rchit  stages.txt  vert_shader.vert  wavefront.glsl
shared_sources/nvvk/: appbase_vkpp.hpp
